--- a/vercel.json
+++ b/vercel.json
@@ -32,6 +32,10 @@
       "dest": "/frontend/$1"
     },
     {
+      "src": "/",
+      "dest": "/frontend/auth.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/frontend/index.html"
     }
