fix: Update Vercel routing to serve modern landing page at root
- Route root path (/) to updated index.html with modern SaaS design
- Move auth page to /auth route for better UX
- Ensure visitors see the professional blue/gray design instead of auth page

--- a/vercel.json
+++ b/vercel.json
@@ -33,6 +33,10 @@
     },
     {
       "src": "/",
+      "dest": "/frontend/index.html"
+    },
+    {
+      "src": "/auth",
       "dest": "/frontend/auth.html"
     },
     {
