--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
     "docker:run": "docker run -p 3000:3000 deckstack",
     "docker:dev": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f app"
+    "docker:logs": "docker-compose logs -f app",
+    "monetization:setup": "node scripts/setup-stripe-products.js",
+    "monetization:test": "node scripts/test-billing.js",
+    "monetization:deploy": "npm run build && vercel --prod",
+    "stripe:create-products": "node scripts/create-stripe-products.js",
+    "stripe:configure": "node scripts/configure-stripe.js",
+    "stripe:test-webhook": "stripe listen --forward-to localhost:3005/api/v1/billing/webhook"
   },
   "keywords": [
     "ecommerce",
@@ -45,6 +51,8 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@shopify/shopify-api": "^11.14.1",
+    "@stripe/stripe-js": "^7.8.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
@@ -65,6 +73,7 @@
     "multer": "^1.4.5-lts.1",
     "nats": "^2.18.0",
     "node-cron": "^3.0.3",
+    "stripe": "^18.4.0",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
   },
