--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ TCGPLAYER_API_KEY="your-tcgplayer-api-key"
 TCGPLAYER_API_SECRET="your-tcgplayer-api-secret"
 BINDERPOS_API_URL="your-binderpos-api-url"
 BINDERPOS_API_KEY="your-binderpos-api-key"
+BINDERPOS_STORE_ID="your-store-id"
+BINDERPOS_TIMEOUT="30000"
+BINDERPOS_RETRY_ATTEMPTS="3"
 
 # eBay Configuration
 EBAY_CLIENT_ID="your-ebay-client-id"
@@ -50,6 +53,17 @@ UPLOAD_PATH="./uploads"
 
 # Multi-tenancy
 DEFAULT_TENANT_ID="default"
+
+# Automation Configuration
+AUTOMATION_ENABLED="true"
+AUTOMATION_MAX_RETRIES="3"
+AUTOMATION_RETRY_DELAY="5000"
+AUTOMATION_BATCH_SIZE="10"
+
+# WebSocket Configuration
+FRONTEND_URL="http://localhost:3000"
+WEBSOCKET_ENABLED="true"
+WEBSOCKET_CORS_ORIGIN="http://localhost:3000,http://localhost:3001,http://localhost:3005"
 
 # Monitoring
 PROMETHEUS_PORT=9090
