--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "@types/ioredis": "^4.28.10",
+    "@types/socket.io": "^3.0.1",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -74,6 +75,7 @@
     "multer": "^1.4.5-lts.1",
     "nats": "^2.18.0",
     "node-cron": "^3.0.3",
+    "socket.io": "^4.8.1",
     "stripe": "^18.4.0",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
