fix: Update Vercel configuration for automation dashboard
- Add route for /automation.html to serve automation dashboard
- Ensure proper routing for new automation features
- Fix deployment configuration for Phase 1 automation system

--- a/vercel.json
+++ b/vercel.json
@@ -40,6 +40,10 @@
       "dest": "/frontend/auth.html"
     },
     {
+      "src": "/automation.html",
+      "dest": "/frontend/automation.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/frontend/index.html"
     }
