--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,22 @@
   "builds": [
     {
       "src": "api/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     },
     {
       "src": "frontend/**",
       "use": "@vercel/static"
     }
   ],
+  "functions": {
+    "api/index.js": {
+      "maxDuration": 30
+    }
+  },
+  "installCommand": "npm install",
   "routes": [
     {
       "src": "/api/(.*)",
