fix: remove conflicting functions property from vercel.json
- Moved maxDuration config to builds.config to resolve Vercel deployment error
- Eliminates conflict between functions and builds properties

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
       "src": "api/index.js",
       "use": "@vercel/node",
       "config": {
-        "maxLambdaSize": "50mb"
+        "maxLambdaSize": "50mb",
+        "maxDuration": 30
       }
     },
     {
@@ -13,11 +14,6 @@
       "use": "@vercel/static"
     }
   ],
-  "functions": {
-    "api/index.js": {
-      "maxDuration": 30
-    }
-  },
   "installCommand": "npm install",
   "routes": [
     {
